Add footer to content.html

--- a/web/html/content.html
+++ b/web/html/content.html
@@ -9,4 +9,7 @@
             <li>Git has been installed</li>
         </ul>
     </body>
+    <footer>
+        Professional Development Project
+    </footer>
 </html>
