--- a/web/html/test.html
+++ b/web/html/test.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <body>
 <h1>Test Page!!!</h1>
-<p>It is an empty page</p>
+<p>Content of this page should be updated</p>
 </body>
 </html>
